2009-09-17    <piumarta@ubuntu.piumarta.com>

	* cmake/Plugins.cmake: Set ${plugin}_disabled for each plugin,
	recording whether the plugin is to be built.

	* vm/build.cmake: Set useoss according to vm-sound-OSS_disabled.

	* cmake/config.in: Substitute [useoss] when configuring.

	* cmake/squeak.in: Communicate with the VM via environment.  Don't
	attempt to user padsp wrapper unless vm-sound-OSS was built.

	* vm/config.cmake: Configure interp as "gnu-interp" if compiler is
	GCC, otherwise "interp".

	* vm/build.cmake: squeakvm depends on bld/${interp}.c.  Implicitly
	build bld/gnu-interp.c from src/vm/interp.c using gnuify.
	Implicitly build bld/interp.c by copying src/vm/interp.c.

	* cmake/gnuify: Try gnuify.awk with gawk then awk then cp.

	* cmake/gnuify.awk: Copied from old config/gnuify.

	* cmake/configure (svnversion): Quote unix/.svn to permit spaces
	in pathnames.

2009-09-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* doc/RELEASE_NOTES_3.11.3.2135: Release 3.11.3.2135.

2009-09-16    <piumarta@ubuntu.piumarta.com>

	* cmake/configure: Read svnversion from unix/svnversion if not
	building from a repo, otherwise generate via svn info and update
	unix/svnversion.

	* src/vm/interp.h: Defines VMMAKER_VERSION as per VMM-138.

2009-09-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/configure: Properly convey --src --CFLAGS values to cmake.

2009-09-14    <piumarta@ubuntu.piumarta.com>

	* vm-sound-pulse: Pulse Audio driver added, thanks to Derek
	O'Connell.

	* vm-sound-pulse/sqUnixSoundPulseAudio.c: Driver interface
	structure is called "pulse".

	* vm-sound-pulse/config.cmake: Require libpulse-simple rather than
	libpulse.

	* vm/sqUnixMain.c (moduleDescriptions): Add vm-sound-pulse to list
	of auto-loaded sound drivers.

2009-09-10    <piumarta@ubuntu.piumarta.com>

	* plugins/SqueakFFIPrims/x86-sysv-asm.S (ffiCallAddressOf): Pop a
	float return value off the FPU stack, even though we don't know